--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ra-data-json-server": "^4.16.16",
     "react": "^18.2.0",
+    "react-admin": "^4.16.16",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
   },
