--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "dependencies": {
         "concurrently": "^8.2.2",
         "ra-data-json-server": "^4.16.16",
+        "ra-i18n-polyglot": "^4.16.16",
+        "ra-language-russian": "^4.14.2",
         "react": "^18.2.0",
         "react-admin": "^4.16.16",
         "react-dom": "^18.2.0",
