--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,12 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
         "concurrently": "^8.2.2",
         "ra-data-json-server": "^4.16.16",
         "ra-i18n-polyglot": "^4.16.16",
+        "ra-input-rich-text": "^4.16.16",
         "ra-language-russian": "^4.14.2",
         "react": "^18.2.0",
         "react-admin": "^4.16.16",
