--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
         "@emotion/styled": "^11.11.5",
         "concurrently": "^8.2.2",
         "ra-data-json-server": "^4.16.16",
+        "ra-data-simple-rest": "^4.16.16",
         "ra-i18n-polyglot": "^4.16.16",
         "ra-input-rich-text": "^4.16.16",
         "ra-language-russian": "^4.14.2",
