--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
         "@emotion/styled": "^11.11.5",
         "@mui/icons-material": "^5.15.15",
         "@mui/material": "^5.15.15",
+        "axios": "^1.6.8",
         "concurrently": "^8.2.2",
         "ra-data-json-server": "^4.16.16",
         "ra-data-simple-rest": "^4.16.16",
